Finalize SVM_TFIDF

--- a/src/SVM_TFIDF.ipynb
+++ b/src/SVM_TFIDF.ipynb
@@ -79,20 +79,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6988, 26884)\n"
-     ]
-    }
-   ],
    "source": [
-    "print(Train_X_Tfidf.shape)"
+    "## For Stance Classification"
    ]
   },
   {
@@ -126,11 +117,11 @@
     "# Count the number of each class\n",
     "from collections import Counter\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "print(Counter(Train_Y))\n",
+    "print(Counter(stance_Train_Y))\n",
     "# transform the dataset\n",
     "oversample = SMOTE()\n",
-    "SMOTE_Train_X_Tfidf, SMOTE_Train_Y = oversample.fit_resample(Train_X_Tfidf, Train_Y)\n",
-    "print(Counter(SMOTE_Train_Y))\n"
+    "SMOTE_Train_X_Tfidf, SMOTE_stance_Train_Y = oversample.fit_resample(Train_X_Tfidf, stance_Train_Y)\n",
+    "print(Counter(SMOTE_stance_Train_Y))\n"
    ]
   },
   {
@@ -138,87 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train the model agains the unbalanced data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM Accuracy Score ->  81.8\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Classifier - Algorithm - SVM\n",
-    "# fit the training dataset on the classifier\n",
-    "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
-    "SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
-    "SVM.fit(Train_X_Tfidf,Train_Y)\n",
-    "# predict the labels on validation dataset\n",
-    "predictions_SVM = SVM.predict(Test_X_Tfidf)\n",
-    "# Use accuracy_score function to get the accuracy\n",
-    "print(\"SVM Accuracy Score -> \",accuracy_score(predictions_SVM, Test_Y)*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1 score for each class ->  [0.24444444 0.25301205 0.90137615]\n",
-      "Macro Average F1 score ->  0.46627754647540215\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate the F1 score for each class\n",
-    "from sklearn.metrics import f1_score\n",
-    "print(\"F1 score for each class -> \",f1_score(Test_Y, predictions_SVM, average=None))\n",
-    "# Calculate the Macro Average F1 score for the whole data\n",
-    "print(\"Macro Average F1 score -> \",f1_score(Test_Y, predictions_SVM, average='macro'))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Train the model against the balanced data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM Accuracy Score ->  80.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Classifier - Algorithm - SVM\n",
-    "# fit the training dataset on the classifier\n",
-    "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
-    "SMOTE_SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
-    "SMOTE_SVM.fit(SMOTE_Train_X_Tfidf,SMOTE_Train_Y)\n",
-    "# predict the labels on validation dataset\n",
-    "predictions_SMOTE_SVM = SMOTE_SVM.predict(Test_X_Tfidf)\n",
-    "# Use accuracy_score function to get the accuracy\n",
-    "print(\"SVM Accuracy Score -> \",accuracy_score(predictions_SMOTE_SVM, Test_Y)*100)"
+    "### Classify without SMOTE"
    ]
   },
   {
@@ -230,17 +141,227 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score for each class ->  [0.34710744 0.41463415 0.89161053]\n",
-      "F1 score for the whole data ->  0.5511173723732602\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.16      0.55      0.24        20\n",
+      "           0       0.17      0.53      0.25        40\n",
+      "           1       0.98      0.84      0.90       940\n",
+      "\n",
+      "    accuracy                           0.82      1000\n",
+      "   macro avg       0.43      0.64      0.47      1000\n",
+      "weighted avg       0.93      0.82      0.86      1000\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Calculate the F1 score for each class\n",
-    "from sklearn.metrics import f1_score\n",
-    "print(\"F1 score for each class -> \",f1_score(Test_Y, predictions_SMOTE_SVM, average=None))\n",
-    "# Calculate the F1 score for the whole data\n",
-    "print(\"F1 score for the whole data -> \",f1_score(Test_Y, predictions_SMOTE_SVM, average='macro'))"
+    "# Classifier - Algorithm - SVM\n",
+    "# fit the training dataset on the classifier\n",
+    "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
+    "SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SVM.fit(Train_X_Tfidf,stance_Train_Y)\n",
+    "# predict the labels on validation dataset\n",
+    "predictions_SVM = SVM.predict(Test_X_Tfidf)\n",
+    "# Use accuracy_score function to get the accuracy\n",
+    "print(classification_report(predictions_SVM, stance_Test_Y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classify with SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.30      0.41      0.35        51\n",
+      "           0       0.40      0.42      0.41       120\n",
+      "           1       0.90      0.88      0.89       829\n",
+      "\n",
+      "    accuracy                           0.80      1000\n",
+      "   macro avg       0.54      0.57      0.55      1000\n",
+      "weighted avg       0.81      0.80      0.81      1000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classifier - Algorithm - SVM\n",
+    "# fit the training dataset on the classifier\n",
+    "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
+    "SMOTE_SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SMOTE_SVM.fit(SMOTE_Train_X_Tfidf,SMOTE_stance_Train_Y)\n",
+    "# predict the labels on validation dataset\n",
+    "predictions_SMOTE_SVM = SMOTE_SVM.predict(Test_X_Tfidf)\n",
+    "# Use accuracy_score function to get the accuracy\n",
+    "print(classification_report(predictions_SMOTE_SVM, stance_Test_Y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Category Classification"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply SMOTE to the training data to balance the classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10.0\n",
+      "Counter({'info_news': 3616, 'personal': 1025, 'celebrity': 975, 'plan': 606, 'unrelated': 323, 'others': 167, 'requests': 112, 'rumors': 79, 'advice': 67, 'restrictions': 18})\n",
+      "Counter({'celebrity': 3616, 'info_news': 3616, 'personal': 3616, 'unrelated': 3616, 'plan': 3616, 'requests': 3616, 'others': 3616, 'rumors': 3616, 'advice': 3616, 'restrictions': 3616})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here we want to apply SMOTE to the data to balance the data against 3 classes\n",
+    "# check version number\n",
+    "import imblearn\n",
+    "print(imblearn.__version__)\n",
+    "# Count the number of each class\n",
+    "from collections import Counter\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "print(Counter(cat_Train_Y))\n",
+    "# transform the dataset\n",
+    "oversample = SMOTE()\n",
+    "SMOTE_Train_X_Tfidf, SMOTE_cat_Train_Y = oversample.fit_resample(Train_X_Tfidf, cat_Train_Y)\n",
+    "print(Counter(SMOTE_cat_Train_Y))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classify without SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      advice       0.00      0.00      0.00         0\n",
+      "   celebrity       0.77      0.87      0.82       129\n",
+      "   info_news       0.91      0.68      0.78       735\n",
+      "      others       0.00      0.00      0.00         1\n",
+      "    personal       0.50      0.58      0.54       110\n",
+      "        plan       0.01      0.17      0.02         6\n",
+      "    requests       0.05      0.50      0.09         2\n",
+      "restrictions       0.00      0.00      0.00         0\n",
+      "      rumors       0.00      0.00      0.00         1\n",
+      "   unrelated       0.25      0.56      0.35        16\n",
+      "\n",
+      "    accuracy                           0.68      1000\n",
+      "   macro avg       0.25      0.34      0.26      1000\n",
+      "weighted avg       0.83      0.68      0.74      1000\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\osama\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\osama\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\osama\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classifier - Algorithm - SVM\n",
+    "# fit the training dataset on the classifier\n",
+    "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
+    "SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SVM.fit(Train_X_Tfidf,cat_Train_Y)\n",
+    "# predict the labels on validation dataset\n",
+    "predictions_SVM = SVM.predict(Test_X_Tfidf)\n",
+    "# Use accuracy_score function to get the accuracy\n",
+    "print(classification_report(predictions_SVM, cat_Test_Y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classify with SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      advice       0.20      0.50      0.29         4\n",
+      "   celebrity       0.81      0.83      0.82       143\n",
+      "   info_news       0.72      0.72      0.72       547\n",
+      "      others       0.00      0.00      0.00         6\n",
+      "    personal       0.61      0.55      0.58       143\n",
+      "        plan       0.28      0.21      0.24       107\n",
+      "    requests       0.15      0.16      0.15        19\n",
+      "restrictions       0.50      0.33      0.40         3\n",
+      "      rumors       0.00      0.00      0.00         2\n",
+      "   unrelated       0.31      0.42      0.35        26\n",
+      "\n",
+      "    accuracy                           0.63      1000\n",
+      "   macro avg       0.36      0.37      0.36      1000\n",
+      "weighted avg       0.64      0.63      0.63      1000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classifier - Algorithm - SVM\n",
+    "# fit the training dataset on the classifier\n",
+    "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
+    "SMOTE_SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SMOTE_SVM.fit(SMOTE_Train_X_Tfidf,SMOTE_cat_Train_Y)\n",
+    "# predict the labels on validation dataset\n",
+    "predictions_SMOTE_SVM = SMOTE_SVM.predict(Test_X_Tfidf)\n",
+    "# Use accuracy_score function to get the accuracy\n",
+    "print(classification_report(predictions_SMOTE_SVM, cat_Test_Y))"
    ]
   },
   {
@@ -253,7 +374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -267,12 +388,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "79fdc8352940022464368746d67d12dbc9a3740708d0e5e01c2eafb24b507835"
    }
   }
  },
