--- a/src/SVM_TFIDF.ipynb
+++ b/src/SVM_TFIDF.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
     "# Classifier - Algorithm - SVM\n",
     "# fit the training dataset on the classifier\n",
     "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
-    "SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SVM = svm.SVC(C=1.0, kernel='linear', gamma='auto')\n",
     "SVM.fit(Train_X_Tfidf,stance_Train_Y)\n",
     "# predict the labels on validation dataset\n",
     "predictions_SVM = SVM.predict(Test_X_Tfidf)\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,13 +185,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.30      0.41      0.35        51\n",
-      "           0       0.40      0.42      0.41       120\n",
-      "           1       0.90      0.88      0.89       829\n",
+      "          -1       0.30      0.42      0.35        50\n",
+      "           0       0.40      0.42      0.41       122\n",
+      "           1       0.90      0.88      0.89       828\n",
       "\n",
       "    accuracy                           0.80      1000\n",
       "   macro avg       0.54      0.57      0.55      1000\n",
-      "weighted avg       0.81      0.80      0.81      1000\n",
+      "weighted avg       0.81      0.80      0.80      1000\n",
       "\n"
      ]
     }
@@ -200,7 +200,7 @@
     "# Classifier - Algorithm - SVM\n",
     "# fit the training dataset on the classifier\n",
     "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
-    "SMOTE_SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SMOTE_SVM = svm.SVC(C=1.0, kernel='linear', gamma='auto')\n",
     "SMOTE_SVM.fit(SMOTE_Train_X_Tfidf,SMOTE_stance_Train_Y)\n",
     "# predict the labels on validation dataset\n",
     "predictions_SMOTE_SVM = SMOTE_SVM.predict(Test_X_Tfidf)\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
     "# Classifier - Algorithm - SVM\n",
     "# fit the training dataset on the classifier\n",
     "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
-    "SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SVM = svm.SVC(C=1.0, kernel='linear', gamma='auto')\n",
     "SVM.fit(Train_X_Tfidf,cat_Train_Y)\n",
     "# predict the labels on validation dataset\n",
     "predictions_SVM = SVM.predict(Test_X_Tfidf)\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -335,19 +335,19 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "      advice       0.20      0.50      0.29         4\n",
-      "   celebrity       0.81      0.83      0.82       143\n",
-      "   info_news       0.72      0.72      0.72       547\n",
-      "      others       0.00      0.00      0.00         6\n",
-      "    personal       0.61      0.55      0.58       143\n",
-      "        plan       0.28      0.21      0.24       107\n",
-      "    requests       0.15      0.16      0.15        19\n",
-      "restrictions       0.50      0.33      0.40         3\n",
-      "      rumors       0.00      0.00      0.00         2\n",
+      "   celebrity       0.79      0.83      0.81       137\n",
+      "   info_news       0.72      0.72      0.72       543\n",
+      "      others       0.00      0.00      0.00         5\n",
+      "    personal       0.62      0.56      0.59       141\n",
+      "        plan       0.28      0.21      0.24       110\n",
+      "    requests       0.15      0.15      0.15        20\n",
+      "restrictions       0.50      0.09      0.15        11\n",
+      "      rumors       0.00      0.00      0.00         3\n",
       "   unrelated       0.31      0.42      0.35        26\n",
       "\n",
       "    accuracy                           0.63      1000\n",
-      "   macro avg       0.36      0.37      0.36      1000\n",
-      "weighted avg       0.64      0.63      0.63      1000\n",
+      "   macro avg       0.36      0.35      0.33      1000\n",
+      "weighted avg       0.63      0.63      0.63      1000\n",
       "\n"
      ]
     }
@@ -356,7 +356,7 @@
     "# Classifier - Algorithm - SVM\n",
     "# fit the training dataset on the classifier\n",
     "# What is the best kernel for SVM in the case of multi-class classification? - Quora\n",
-    "SMOTE_SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
+    "SMOTE_SVM = svm.SVC(C=1.0, kernel='linear', gamma='auto')\n",
     "SMOTE_SVM.fit(SMOTE_Train_X_Tfidf,SMOTE_cat_Train_Y)\n",
     "# predict the labels on validation dataset\n",
     "predictions_SMOTE_SVM = SMOTE_SVM.predict(Test_X_Tfidf)\n",
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
