--- a/src/SVM_TFIDF.ipynb
+++ b/src/SVM_TFIDF.ipynb
@@ -41,15 +41,15 @@
     "##############For Training Data#####################\n",
     "# Read the data from the csv file named 'preprocessedData.csv' arabic data\n",
     "train = pd.read_csv('../Dataset/cleaned_train.csv', encoding='utf-8')\n",
+    "\n",
+    "# Split the data into train and test\n",
+    "train, test = model_selection.train_test_split(train, test_size=0.2)\n",
+    "\n",
     "# Unpack the data into text and stance\n",
     "Train_X = train['text']\n",
     "stance_Train_Y = train['stance']\n",
     "cat_Train_Y = train['category']\n",
     "\n",
-    "##############For Testing Data#####################\n",
-    "test = pd.read_csv('../Dataset/cleaned_dev.csv', encoding='utf-8')\n",
-    "# Perform the data preprocessing\n",
-    "test = clean_data(test)\n",
     "# Unpack the data into text, and stance\n",
     "Test_X = test['text']\n",
     "stance_Test_Y = test['stance']\n",
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
